--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   }
     }
 
-    window.onload = () => {
+    document.addEventListener("DOMContentLoaded", () => {
       addMessage("👋 Welcome to GPTGRIDX - Your Shopify Assistant! Ask anything about our store, orders, or products.", "bot");
       scrollToBottom();
     };
