--- a/index.html
+++ b/index.html
@@ -1,98 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GPTGRIDX Shopify Bot</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #f0f0f0;
-    }
-    .chat-widget-icon {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #00bcd4;
+      background: #101010;
       color: white;
-      border: none;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-      font-size: 30px;
-      cursor: pointer;
-      z-index: 999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     .chat-container {
-  visibility: hidden;
-  opacity: 0;
-  transform: translateY(20px);
-  position: fixed;
-  bottom: 90px;
-  right: 20px;
-  width: 360px;
-  height: 500px;
-  background: rgba(0, 0, 0, 0.8);
-  border-radius: 15px;
-  flex-direction: column;
-  padding: 15px;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
-  z-index: 998;
-  transition: all 0.3s ease-in-out;
-  pointer-events: none;
-
-      position: fixed;
-      bottom: 90px;
-      right: 20px;
-      width: 360px;
-      height: 500px;
-      background: rgba(0, 0, 0, 0.8);
-      border-radius: 15px;
-      display: none;
+      width: 400px;
+      height: 600px;
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(10px);
+      border-radius: 20px;
+      padding: 20px;
+      box-shadow: 0 0 30px rgba(0, 255, 255, 0.2);
+      display: flex;
       flex-direction: column;
-      padding: 15px;
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.2);
-      z-index: 998;
     }
     .faq-buttons {
       display: flex;
       flex-wrap: wrap;
-      gap: 6px;
+      gap: 10px;
       margin-bottom: 10px;
     }
     .faq-buttons button {
-      flex: 1;
+      flex: 1 1 48%;
       background-color: #00bcd4;
-      color: #fff;
+      color: white;
       border: none;
-      border-radius: 6px;
-      padding: 6px;
-      font-size: 12px;
+      border-radius: 8px;
+      padding: 8px;
       cursor: pointer;
+      font-size: 12px;
     }
     .messages {
       flex: 1;
       overflow-y: auto;
-      margin-bottom: 10px;
       display: flex;
       flex-direction: column;
+      margin-bottom: 10px;
     }
     .message {
       margin: 6px 0;
       padding: 8px 12px;
       border-radius: 10px;
       max-width: 80%;
-      position: relative;
       font-size: 14px;
+      position: relative;
     }
     .message::after {
       content: attr(data-time);
       font-size: 10px;
       position: absolute;
       bottom: -14px;
-      right: 8px;
+      right: 10px;
       color: #ccc;
     }
     .user {
@@ -129,18 +100,10 @@
       0% { opacity: 0.2; }
       100% { opacity: 1; }
     }
-  
-.chat-container.open {
-  visibility: visible;
-  opacity: 1;
-  transform: translateY(0);
-  pointer-events: auto;
-}
-</style>
+  </style>
 </head>
 <body>
-  <button class="chat-widget-icon" onclick="toggleChat()">💬</button>
-  <div class="chat-container" id="chatContainer">
+  <div class="chat-container">
     <div class="faq-buttons">
       <button onclick="sendFAQ('What is your return policy?')">Return Policy</button>
       <button onclick="sendFAQ('Do you offer international shipping?')">International Shipping</button>
@@ -150,22 +113,18 @@
     </div>
     <div class="messages" id="messages"></div>
     <div class="input-area">
-      <input type="text" id="input" placeholder="Type a message and hit Enter..." />
+      <input type="text" id="input" placeholder="Type a message and hit Enter...">
     </div>
   </div>
+
   <script>
-    const chatContainer = document.getElementById("chatContainer");
     const messagesEl = document.getElementById("messages");
     const inputEl = document.getElementById("input");
-
-    function toggleChat() {
-      chatContainer.classList.toggle("open");
-    }
 
     document.addEventListener("DOMContentLoaded", () => {
       addMessage("👋 Welcome to GPTGRIDX - Your Shopify Assistant! Ask anything about our store, orders, or products.", "bot");
       scrollToBottom();
-    };
+    });
 
     inputEl.addEventListener("keydown", async (e) => {
       if (e.key === "Enter" && inputEl.value.trim() !== "") {
