--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GPTGRIDX Shopify Bot</title>
+  <title>GPTGRIDX - Shopify Bot</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       background: #101010;
       color: white;
